--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -77,7 +77,7 @@
             width: '400px'
         }"
         rejectIcon="hidden"
-        acc$editorProps()tIcon="hidden"
+        acceptIcon="hidden"
         rejectButtonStyleClass="p-button-outlined"
         data-testId="confirm-dialog"></p-confirmDialog>
 }
