--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.scss
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.scss
@@ -48,6 +48,8 @@ dot-results-seo-tool {
     flex-grow: 1;
     margin: 0 auto;
     border: solid 1px $color-palette-gray-300;
+    height: 100%;
+    width: 100%;
 
     iframe {
         border: none;
