feat(edit-content) empty and error placeholder #29185

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -44,7 +44,7 @@
                         @fadeAnimation
                         (itemChecked)="store.addSelected($event)"
                         (removeItem)="store.removeSelected($event)"
-                        [isLoading]="store.isSearchLoading()"
+                        [status]="store.searchStatus()"
                         [categories]="store.searchCategoryList()"
                         [selected]="store.selected()" />
                 }
