--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 .category-field__search-list {
     display: flex;
     flex-direction: column;
@@ -5,7 +7,25 @@
     overflow: hidden;
 }
 
-:host ::ng-deep .dotTable.p-datatable > .p-datatable-wrapper {
-    border-radius: 0;
-    border: none;
+:host {
+    ::ng-deep {
+        .dotTable.p-datatable > .p-datatable-wrapper {
+            border-radius: 0;
+            border: none;
+        }
+    }
+
+    &.category-field__search-list--empty ::ng-deep {
+        p-table,
+        .dotTable.p-datatable,
+        .p-datatable-wrapper,
+        table {
+            height: 100%;
+
+            tr:not(.p-highlight):hover {
+                background: $white;
+                cursor: auto;
+            }
+        }
+    }
 }
