chore(edit-content): Use alias in  signal inputs ans remove & from outputs

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -4,7 +4,7 @@
             data-testId="categories-table"
             [scrollHeight]="$scrollHeight()"
             [scrollable]="true"
-            [value]="categories()"
+            [value]="$categories()"
             dataKey="key"
             selectionMode="multiple"
             [(selection)]="itemsSelected"
