--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
@@ -1,25 +1,5 @@
 @use "variables" as *;
 
-.p-breadcrumb ul > .p-breadcrumb-chevron.pi {
-    color: $color-palette-gray-500;
-
-    &:not(:nth-child(2)) {
-        font-size: $font-size-xs;
-    }
-}
-
-.p-breadcrumb ul li:first-child {
-    font-size: $font-size-lg;
-}
-
-.p-breadcrumb ul li:nth-child(2)::before {
-    content: "";
-    width: 1px;
-    height: 20px;
-    background: $color-palette-gray-500;
-    display: block;
-}
-
 .p-breadcrumb ul li .p-menuitem-link {
     transition: none;
     border-radius: $border-radius-xs;
@@ -32,7 +12,7 @@
 }
 
 .p-breadcrumb ul li .p-menuitem-link[href] .p-menuitem-text {
-    font-size: $font-size-lg;
+    font-size: $font-size-default;
 
     &:hover {
         color: $color-palette-primary;
