--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
@@ -1,6 +1,6 @@
 @if ($options()?.actionIcon) {
     <p-button
-        (onClick)="handleAction($options())"
+        (onClick)="handleAction()"
         [icon]="$options()?.actionIcon"
         styleClass="p-button-text p-button-sm p-button-rounded"
         data-testId="info-action"></p-button>
