fix(edit-content) fix scroll jump in selected categories sidebar

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -41,6 +41,7 @@
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
+    padding-right: calc(1rem - 17px);
 }
 
 .category-field__categories,
@@ -53,6 +54,7 @@
 
 .category-field__selected-categories-list {
     overflow-y: auto;
+    scrollbar-gutter: stable;
 }
 
 :host ::ng-deep .p-sidebar-content {
