--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -1,5 +1,7 @@
 @use "variables" as *;
 
+$default-scroll-width: 17px;
+
 .category-field__header {
     align-items: center;
     flex-wrap: wrap;
@@ -41,7 +43,7 @@
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
-    padding-right: calc(1rem - 17px);
+    padding-right: calc($spacing-3 - $default-scroll-width);
 }
 
 .category-field__categories,
