fix(edit-content) fix scroll jump in selected categories sidebar (#29366)
### Proposed Changes
*  fix scroll jump in selected categories sidebar

### Checklist
- [ ] Tests
- [ ] Translations
- [ ] Security Implications Contemplated (add notes if applicable)

### Additional Info
** any additional useful context or info **

### Screenshots


https://github.com/user-attachments/assets/fb2b3cee-7403-4363-ac88-577cfbc818f1

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -1,5 +1,7 @@
 @use "variables" as *;
 
+$default-scroll-width: 17px;
+
 .category-field__header {
     align-items: center;
     flex-wrap: wrap;
@@ -41,6 +43,7 @@
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
+    padding-right: calc($spacing-3 - $default-scroll-width);
 }
 
 .category-field__categories,
@@ -53,6 +56,7 @@
 
 .category-field__selected-categories-list {
     overflow-y: auto;
+    scrollbar-gutter: stable;
 }
 
 :host ::ng-deep .p-sidebar-content {
