chore(uve): Update state management to NgRx Signal Store #28947 (#29239)
# Proposed Changes

- Rewrite and apply new architecture to the Old Store to make it work
with the new Signal Store and Custom Features. Use Computed Signals as a
Reflection of the UI and State and Methods as source of information.
- Centralize reusable code
- Minimize the logic responsibility of the components to make them more
simple and more readable
- Replace all `ngFor` `ngIf` and `ngSwitch` for the new angular syntax
- Add missing `themeId` on layout payload
- Add missing functionality to fetch personas on page navigation
- Add validation to replace urls from `/` to `index` to maintain
consistency
- Remove not natural reloads, extra calls to functions and anti-patterns
- Fix inconsistencies across shared logic 
- Remove logic from the templates 
- Overall cleaning of the code to minimize tech debt 
- Fix out of place message for No Contentlets in Palette 
- Enhance overall perfomance of the tool
- Fix internal navigation for Traditional Pages (VTL)
- Enhance and minimize logic for Inline Editing (It was colliding with
the navigation for Traditional Pages)
- Add `SCROLLING` state to the Editor
- Remove not necessary `MODE` from the editor, since now our store is a
reflection of the UI
- Separate `status` of the UVE from `state` of the editor to enhance
reloads and the natural cycle of the tool
- Remove all calls to `queryParams` from the router, since params now
live in the store and are in sync with the url
- Remove all references of old `EmaStore`
- Remove not needed `Enums`, `Types`, `Interfaces` and `Mocks`

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/components/edit-ema-navigation-bar/edit-ema-navigation-bar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/components/edit-ema-navigation-bar/edit-ema-navigation-bar.component.html
@@ -1,9 +1,9 @@
 <nav class="edit-ema-nav-bar">
-    <ng-container *ngFor="let item of items">
+    @for (item of items; track $index) {
         <ng-container
-            [ngTemplateOutlet]="item.action ? button : anchor"
+            [ngTemplateOutlet]="!item.href?.length ? button : anchor"
             [ngTemplateOutletContext]="{ item: item }"></ng-container>
-    </ng-container>
+    }
 </nav>
 
 <ng-template #anchor let-item="item">
@@ -28,7 +28,7 @@
 
 <ng-template #button let-item="item">
     <button
-        (click)="item.isDisabled ? null : item?.action()"
+        (click)="item.isDisabled ? null : itemAction(item)"
         [ngClass]="{ 'edit-ema-nav-bar__item--disabled': item.isDisabled }"
         [disabled]="item.isDisabled"
         class="edit-ema-nav-bar__item edit-ema-nav-bar__item--button"
