--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -1,23 +1,20 @@
-<ng-container *ngIf="shellProperties$ | async as sp">
-    <ng-container *ngIf="sp.canRead; else error">
-        <router-outlet (activate)="onActivateRoute($event)"></router-outlet>
-        <dot-edit-ema-navigation-bar
-            [items]="sp.items"
-            data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
-        <p-toast position="top-center" data-testId="ema-toast"></p-toast>
-        <dot-page-tools-seo
-            [currentPageUrlParams]="sp.seoProperties"
-            #pageTools></dot-page-tools-seo>
-    </ng-container>
-
-    <ng-template #error>
-        <ng-container [ngSwitch]="sp.error">
-            <dot-info-page *ngSwitchCase="403" [info]="EMA_INFO_PAGES.ACCESS_DENIED" />
-            <dot-info-page *ngSwitchCase="404" [info]="EMA_INFO_PAGES.NOT_FOUND" />
-            <dot-not-license *ngSwitchCase="401" />
-        </ng-container>
-    </ng-template>
-</ng-container>
+@if ($shellProps()?.canRead) {
+    <router-outlet (activate)="onActivateRoute($event)"></router-outlet>
+    <dot-edit-ema-navigation-bar
+        [items]="$shellProps().items"
+        (action)="handleItemAction($event)"
+        data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
+    <p-toast position="top-center" data-testId="ema-toast"></p-toast>
+    <dot-page-tools-seo
+        [currentPageUrlParams]="$shellProps().seoParams"
+        #pageTools></dot-page-tools-seo>
+} @else {
+    @if ($shellProps().error?.code === 401) {
+        <dot-not-license />
+    } @else if ($shellProps()?.error?.pageInfo) {
+        <dot-info-page [info]="$shellProps().error.pageInfo" />
+    }
+}
 
 <dot-edit-ema-dialog
     (action)="handleNgEvent($event)"
