Empty and error message for category field in `search` mode (#29337)
### Proposed Changes
* Add empty and error message for edit content in `search` mode

### Checklist
- [x] Tests
- [x] Translations
- [ ] Security Implications Contemplated (add notes if applicable)

### Ok
<img width="1492" alt="Screenshot 2024-07-23 at 12 50 58 PM"
src="https://github.com/user-attachments/assets/937d16ab-7654-4f05-9560-7b06af458afe">

### Error
<img width="1486" alt="Screenshot 2024-07-23 at 12 50 19 PM"
src="https://github.com/user-attachments/assets/4ef22762-7b11-494a-ac05-54e30f03f1bb">

### Empty
<img width="1487" alt="Screenshot 2024-07-23 at 12 50 51 PM"
src="https://github.com/user-attachments/assets/2cddecb6-dc2f-4237-9f11-3f01d7dab6c1">

---------

Co-authored-by: Nicolas Molina <hi@nicobytes.com>

--- a/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.html
@@ -1,17 +1,14 @@
 <div class="message__wrapper flex gap-4 flex-column w-30rem">
     <div
         class="message__principal-wrapper flex align-items-center flex-column gap-2"
-        data-Testid="message-principal">
-        @if (configuration?.icon) {
-            <i
-                [ngClass]="[configuration.icon]"
-                class="message__icon pi"
-                data-Testid="message-icon"></i>
+        data-testid="message-principal">
+        @if (configuration.icon) {
+            <i [class]="'message__icon pi ' + configuration.icon" data-testid="message-icon"></i>
         }
-        <h1 class="message__title" data-Testid="message-title">{{ configuration?.title }}</h1>
-        @if (configuration?.subtitle) {
-            <h2 class="message__subtitle" data-Testid="message-subtitle">
-                {{ configuration?.subtitle }}
+        <h1 class="message__title" data-testid="message-title">{{ configuration.title }}</h1>
+        @if (configuration.subtitle) {
+            <h2 class="message__subtitle" data-testid="message-subtitle">
+                {{ configuration.subtitle }}
             </h2>
         }
     </div>
@@ -19,22 +16,23 @@
     @if (!hideContactUsLink || buttonLabel) {
         <div
             class="message__extra-wrapper flex align-items-center flex-column gap-2"
-            data-Testid="message-extra">
+            data-testid="message-extra">
             @if (buttonLabel) {
                 <button
-                    (click)="buttonAction.emit()"
+                    pButton
                     [label]="buttonLabel"
                     [class.p-button-outlined]="secondaryButton"
-                    pButton
-                    data-Testid="message-button"></button>
+                    (click)="buttonAction.emit()"
+                    data-testid="message-button"></button>
             }
+
             @if (!hideContactUsLink) {
-                @if (!hideContactUsLink && buttonLabel) {
+                @if (buttonLabel) {
                     <span>{{ 'dot.common.or.text' | dm }}</span>
                 }
                 <a
                     class="message__external-link"
-                    data-Testid="message-contact-link"
+                    data-testid="message-contact-link"
                     href="https://dotcms.com/contact-us/"
                     target="_blank">
                     {{ 'Contact-Us-for-more-Information' | dm }}
