--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -1,17 +1,17 @@
 <div #tableContainer class="category-field__search-list">
-    @if (!isLoading()) {
+    @if (!$isLoading()) {
         <p-table
             data-testId="categories-table"
             [scrollHeight]="$scrollHeight()"
             [scrollable]="true"
-            [value]="categories()"
+            [value]="$categories()"
             dataKey="key"
             selectionMode="multiple"
             [(selection)]="itemsSelected"
             (onHeaderCheckboxToggle)="onHeaderCheckboxToggle($event)"
             (onRowSelect)="onSelectItem($event)"
             (onRowUnselect)="onRemoveItem($event)"
-            styleClass="dotTable ">
+            styleClass="dotTable">
             <ng-template pTemplate="header">
                 <tr data-testId="table-header">
                     <th id="checkbox" scope="col" data-testId="table-header-checkbox">
@@ -39,6 +39,16 @@
                                     | dm
                             }}
                         </span>
+                    </td>
+                </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="3">
+                        <dot-empty-container
+                            [configuration]="$emptyOrErrorMessage()"
+                            [hideContactUsLink]="true" />
                     </td>
                 </tr>
             </ng-template>
