change .cw-rule-engine__empty icon from rem to px

--- a/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
+++ b/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
@@ -530,7 +530,7 @@ $finder-s-input: ".ui.input input";
         text-align: center;
 
         i {
-            font-size: 7.5rem;
+            font-size: 120px;
             color: $color-palette-gray-500;
             border: 7px solid;
             border-radius: 10px;
