--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
@@ -17,14 +17,14 @@
     }
 }
 
+label {
+    font-size: $font-size-md;
+}
+
 .content-type__form {
     width: 522px;
     &.content-type__form-banner {
         padding-top: 3.5rem;
-    }
-
-    .field label {
-        font-size: $font-size-md;
     }
 }
 
