chore(ui): working in collapse bredcrumb

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -21,6 +21,15 @@
         </div>
     </ng-template>
 
+    <dot-collapse-breadcrumb
+        [model]="[
+            { label: 'Electronics', url: '' },
+            { label: 'Computer', url: '' },
+            { label: 'Accessories', url: '' },
+            { label: 'Keyboard', url: '' },
+            { label: 'Wireless', url: '' }
+        ]" />
+
     <div class="category-field__content h-full w-full">
         <div class="category-field__left-pane flex flex-column">
             <div class="category-field__search">
