--- a/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
@@ -3,7 +3,7 @@
         <li>
             <p-menu #menu [model]="$model()" [popup]="true" />
             <p-button
-                (click)="menu.toggle($event)"
+                (click)="toogleMenu($event)"
                 icon="pi pi-ellipsis-h"
                 type="button"
                 styleClass="p-button-rounded p-button-text p-button-sm" />
