chore(ui): working in collapse bredcrumb

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
@@ -1,6 +1,6 @@
 @use "variables" as *;
 
-::ng-deep .p-breadcrumb {
+::ng-deep dot-crumbtrail .p-breadcrumb {
     ul li {
         .p-menuitem-link[href] {
             .p-menuitem-text {
