--- a/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
@@ -39,12 +39,21 @@
                 } @else {
                     <a
                         [routerLink]="item.routerLink"
+                        [queryParams]="item.queryParams"
+                        [routerLinkActive]="'p-menuitem-link-active'"
+                        [routerLinkActiveOptions]="item.routerLinkActiveOptions || { exact: false }"
                         class="p-menuitem-link"
                         (click)="itemClick($event, item)"
                         [target]="item.target"
                         [attr.title]="item.title"
                         [attr.id]="item.id"
-                        [attr.tabindex]="item.disabled ? null : '0'">
+                        [attr.tabindex]="item.disabled ? null : '0'"
+                        [fragment]="item.fragment"
+                        [queryParamsHandling]="item.queryParamsHandling"
+                        [preserveFragment]="item.preserveFragment"
+                        [skipLocationChange]="item.skipLocationChange"
+                        [replaceUrl]="item.replaceUrl"
+                        [state]="item.state">
                         @if (item.icon) {
                             <span
                                 class="p-menuitem-icon"
