--- a/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
@@ -1,7 +1,7 @@
-<div class="p-breadcrumb p-component">
-    <ul>
-        @if ($isCollapsed()) {
-            <li>
+<div class="flex align-items-center">
+    @if ($isCollapsed()) {
+        <div class="flex align-items-center">
+            <div>
                 <p-menu #menu [model]="$itemsToHide()" [popup]="true" appendTo="body" />
                 <p-button
                     (click)="menu.toggle($event)"
@@ -9,68 +9,11 @@
                     type="button"
                     data-testid="btn-collapse"
                     styleClass="p-button-rounded p-button-text p-button-sm outline-none" />
-            </li>
-            <li class="p-breadcrumb-chevron">
+            </div>
+            <div class="mx-2">
                 <ChevronRightIcon />
-            </li>
-        }
-
-        @for (item of $itemsToShow(); track $index) {
-            <li>
-                @if (item.routerLink) {
-                    <a
-                        [routerLink]="item.routerLink"
-                        [queryParams]="item.queryParams"
-                        [routerLinkActive]="'p-menuitem-link-active'"
-                        [routerLinkActiveOptions]="item.routerLinkActiveOptions || { exact: false }"
-                        class="p-menuitem-link"
-                        (click)="itemClick($event, item)"
-                        [target]="item.target"
-                        [attr.title]="item.title"
-                        [attr.id]="item.id"
-                        [attr.tabindex]="item.disabled ? null : '0'"
-                        [fragment]="item.fragment"
-                        [queryParamsHandling]="item.queryParamsHandling"
-                        [preserveFragment]="item.preserveFragment"
-                        [skipLocationChange]="item.skipLocationChange"
-                        [replaceUrl]="item.replaceUrl"
-                        [state]="item.state">
-                        @if (item.icon) {
-                            <span
-                                class="p-menuitem-icon"
-                                [ngClass]="item.icon"
-                                [ngStyle]="item.iconStyle"></span>
-                        }
-                        @if (item.label) {
-                            <span class="p-menuitem-text">{{ item.label }}</span>
-                        }
-                    </a>
-                } @else {
-                    <a
-                        [attr.href]="item.url ? item.url : null"
-                        class="p-menuitem-link"
-                        (click)="itemClick($event, item)"
-                        [target]="item.target"
-                        [attr.title]="item.title"
-                        [attr.id]="item.id"
-                        [attr.tabindex]="item.disabled ? null : '0'">
-                        @if (item.icon) {
-                            <span
-                                class="p-menuitem-icon"
-                                [ngClass]="item.icon"
-                                [ngStyle]="item.iconStyle"></span>
-                        }
-                        @if (item.label) {
-                            <span class="p-menuitem-text">{{ item.label }}</span>
-                        }
-                    </a>
-                }
-            </li>
-            @if (!$last) {
-                <li class="p-breadcrumb-chevron">
-                    <ChevronRightIcon />
-                </li>
-            }
-        }
-    </ul>
+            </div>
+        </div>
+    }
+    <p-breadcrumb [model]="$itemsToShow()" (onItemClick)="itemClick.emit($event)" />
 </div>
