chore(ui): working in collapse bredcrumb

--- a/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
@@ -15,5 +15,5 @@
             </div>
         </div>
     }
-    <p-breadcrumb [model]="$itemsToShow()" (onItemClick)="itemClick.emit($event)" />
+    <p-breadcrumb [model]="$itemsToShow()" (onItemClick)="onItemClick.emit($event)" />
 </div>
