--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -70,7 +70,7 @@
                     </button>
                 </div>
             } @else {
-                <div class="category-field__empty-state">
+                <div class="category-field__empty-state" data-testId="category-field__empty-state">
                     <i class="pi pi-check-square"></i>
                     <p>{{ 'edit.content.category-field.sidebar.empty-state' | dm }}</p>
                 </div>
