revert icons font-size from rem to px

--- a/core-web/apps/dotcms-ui/src/assets/material-icons.css
+++ b/core-web/apps/dotcms-ui/src/assets/material-icons.css
@@ -12,7 +12,7 @@
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
-    font-size: 1.5rem;
+    font-size: 24px;
     line-height: 1;
     letter-spacing: normal;
     text-transform: none;
