--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/components/_file-selector-tree.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/components/_file-selector-tree.scss
@@ -156,7 +156,7 @@
     }
 
     div[class$="Icon"] {
-        font-size: 4.5rem;
+        font-size: 72px;
         height: 72px;
         line-height: 1;
         width: 72px;
