--- a/core-web/libs/dotcms-scss/jsp/scss/dotcms.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/dotcms.scss
@@ -88,7 +88,7 @@ td {
     font-family: "Material Icons", sans-serif;
     font-weight: normal;
     font-style: normal;
-    font-size: $font-size-xl; /* Preferred icon size */
+    font-size: 24px; /* Preferred icon size */
     display: inline-block;
     line-height: 1;
     text-transform: none;
