--- a/core-web/libs/dotcms-scss/angular/styles.scss
+++ b/core-web/libs/dotcms-scss/angular/styles.scss
@@ -26,7 +26,7 @@
     font-family: "Material Icons", $font-default;
     font-weight: normal;
     font-style: normal;
-    font-size: $font-size-xl;
+    font-size: 24px;
     line-height: 1;
     letter-spacing: normal;
     text-transform: none;
