--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -10563,7 +10563,7 @@ a.category_higlighted, a.tag_higlighted {
   justify-content: center;
 }
 .file-selector-tree__card div[class$=Icon] {
-  font-size: 4.5rem;
+  font-size: 72px;
   height: 72px;
   line-height: 1;
   width: 72px;
@@ -11231,7 +11231,7 @@ td {
   font-family: "Material Icons", sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: 1.5rem; /* Preferred icon size */
+  font-size: 24px; /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
