fix(ui): fix error with scroll

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
@@ -2,16 +2,19 @@
 
 ::ng-deep dot-crumbtrail .p-breadcrumb {
     ul li {
+        &:first-child {
+            font-size: $font-size-lg;
+            a span.p-menuitem-text {
+                color: $black;
+                font-size: $font-size-lg;
+                font-weight: $font-weight-regular-bold;
+            }
+        }
+
         .p-menuitem-link[href] {
             .p-menuitem-text {
                 font-size: $font-size-lg;
             }
-        }
-
-        &:first-child a span.p-menuitem-text {
-            color: $black;
-            font-size: $font-size-lg;
-            font-weight: $font-weight-regular-bold;
         }
 
         &:last-child a {
